<resources>
    <string name="app_name">Altertravel</string>
    <string name="add_poi">Add POI</string>
    <string name="grant_location_permissions">Grant location permissions</string>
    <string name="grant_background_permissions">Grant background permissions</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="adding_poi">Adding poi</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="category_architecture">Architecture</string>
    <string name="category_nature">Nature</string>
    <string name="category_history_culture">History/Culture</string>
    <!-- Strings used for fragments for navigation -->

</resources>